src/test/ui/borrowck/borrowck-fn-in-const-c.nll.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/borrowck-fn-in-const-c.rs:27:16
   |
LL |         return &local.inner; //~ ERROR does not live long enough
   |                ^^^^^^^^^^^^
LL |     }
   |     - here, drop of `local` needs exclusive access to `local.inner`, because the type `DropString` implements the `Drop` trait
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0713`.
